client/src/Styles/Chats.css
/* ... */
.Chat--Room_Information--Add_Friends--Header_Heading {
  font-size: var(--Chat_Room_Info_Add_Friends_Heading);
  font-weight: 600;
}

.Chat--Room_Information--Add_Friends--Header_Button {
  margin-right: 2em;
}

.Chat--Room_Information--Add_Friends--Header_Button button {
  font-family: var(--Chat_Sub_Font);
  font-size: var(--Chat_Room_Info_Button);
  font-weight: 600;
  padding: 0.5em 1.2em;
  border-style: none;
  border: 2px solid rgb(15, 15, 15);
  border-radius: 7px;
}

.Chat--Room_Information--Add_Friends--Header_Button--Done {
  background-color: rgb(112, 224, 0);
  cursor: pointer;
  &:hover {
    background-color: black;
    color: rgb(112, 224, 0);
    border: 2px solid rgb(112, 224, 0);
  }
}

.Chat--Room_Information--Add_Friends--Header_Button--Done--Inactive {
  background-color: rgb(112, 224, 0, 0.5);
}

.Chat--Room_Information--Add_Friends--Search input {
  font-family: var(--Chat_Main_Font);
  font-size: var(--Chat_Room_Info_Add_Friends_Search);
  width: 100%;
  padding: 0.2em;
  padding-top: 0.3em;
  border-style: none;
  border-radius: 4px;
  margin-bottom: 0.7em;
  outline: none;
}

.Chat--Room_Information--Add_Friends--Friends_List {
  height: calc(100% - 80px);
  overflow-y: scroll;
  padding-block: 2em;
}

.Chat--Room_Information--Add_Friends--Friends_List::-webkit-scrollbar {
  width: 0px;
}

.Chat--Room_Information--Add_Friends--Friend_Card {
  background-color: rgb(25, 25, 25);
  display: flex;
  align-items: center;
  gap: 0.5em;
  padding: 0.5em;
  border-style: none;
  border-radius: 5px;
  cursor: pointer;
}

.Chat--Room_Information--Add_Friends--Friend_Card
  + .Chat--Room_Information--Add_Friends--Friend_Card {
  margin-top: 1em;
}

.Chat--Room_Information--Add_Friends--Friend_Image_Container {
  display: flex;
  min-width: 12%;
  justify-content: center;
  align-items: center;
}

.Chat--Room_Information--Add_Friends--Friend_Image {
  background-color: rgb(20, 33, 61);
  display: flex;
  height: 45px;
  width: 45px;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
}

.Chat--Room_Information--Add_Friends--Friend_Image_Frame {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  mask: radial-gradient(circle, black 22.5px, transparent 22.6px);
}

.Chat--Room_Information--Add_Friends--Friend_Image_Frame img {
  max-height: 100%;
  max-width: 100%;
}

.Chat--Room_Information--Add_Friends--Friend_Icon {
  font-size: var(--Chat_Room_Info_Add_Friends_Friend_Icon);
}

.Chat--Room_Information--Add_Friends--Friend_Details {
  min-width: 88%;
  display: flex;
  align-items: center;
}

.Chat--Room_Information--Add_Friends--Name_And_Id {
  min-width: 80%;
}

.Chat--Room_Information--Add_Friends--Friend_Username {
  font-size: var(--Chat_Room_Info_Add_Friends_Username);
  font-weight: 600;
  margin-bottom: 0.1em;
}

.Chat--Room_Information--Add_Friends--Friend_UserId {
  font-size: var(--Chat_Room_Info_Add_Friends_UserId);
  color: rgb(256, 256, 256, 0.6);
}

.Chat--Room_Information--Add_Friends--Selected {
  min-width: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.Chat--Room_Information--Add_Friends--Selected_Icon {
  font-size: var(--Chat_Room_Info_Add_Friends_Selected_Icon);
  color: rgb(112, 224, 0);
}

.Chat--Room_Information--Add_Friends--Selected--Inactive {
  display: none;
}

.Chat--Room_Information--Image {
  position: relative;
  background-color: rgb(20, 33, 61);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 200px;
  height: 200px;
  border-radius: 50%;
  margin-inline: auto;
}

.Chat--Room_Information--Image_Frame {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  mask: radial-gradient(circle, black 100px, transparent 101px);
}

.Chat--Room_Information--Image_Frame img {
  max-width: 100%;
  max-height: 100%;
}

.Chat--Room_Information--Image--Icon {
  font-size: var(--Chat_Room_Info_Icon);
}

.Chat--Room_Information--Image_Edit--Icon {
  position: absolute;
  bottom: 0px;
  right: 0px;
  font-size: var(--Chat_Room_Info_Edit_Icon);
  cursor: pointer;
  &:hover {
    color: rgb(16, 226, 69);
  }
}

#Chat--Room_Information--Image_Select {
  display: none;
}

.Chat--Room_Information--Edit_Room {
  margin-top: 2em;
}

.Chat--Room_Information--Edit_Room_Name {
  background-color: rgb(25, 25, 25);
  padding: 1em;
  border-radius: 5px;
}

.Chat--Room_Information--Edit_Room_Name--Display {
  display: flex;
  align-items: center;
  width: 100%;
}

.Chat--Room_Information--Edit_Room_Name--Inactive {
  display: none;
}

.Chat--Room_Information--Edit_Room_Name--Name {
  font-family: var(--Chat_Sub_Font);
  font-size: var(--Chat_Room_Info_Room_Name);
  font-weight: 600;
  letter-spacing: 1px;
  min-width: 90%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.Chat--Room_Information--Edit_Room_Name--Edit_Icon_Container {
  min-width: 10%;
  display: flex;
  justify-content: center;
}

.Chat--Room_Information--Edit_Room_Name--Edit_Icon {
  font-size: var(--Chat_Room_Info_Edit_Icon);
  cursor: pointer;
  &:hover {
    color: rgb(16, 226, 69);
  }
}

.Chat--Room_Information--Edit_Room_Name--Input input {
  font-family: var(--Chat_Sub_Font);
  font-size: var(--Chat_Room_Info_Edit_Room_Name);
  border-style: none;
  width: 100%;
  padding: 0.3em;
  border-radius: 4px;
  margin-bottom: 0.5em;
  outline: none;
}

.Chat--Room_Information--Edit_Room_Name--Buttons {
  margin-top: 0.4em;
}

.Chat--Room_Information--Edit_Room_Name--Buttons button {
  font-family: var(--Chat_Sub_Font);
  font-size: var(--Chat_Room_Info_Button);
  font-weight: 600;
  padding: 0.5em 1.2em;
  border-radius: 7px;
  cursor: pointer;
}

.Chat--Room_Information--Edit_Room_Name--Buttons--Cancel {
  background-color: white;
  margin-right: 1em;
  border: 2px solid rgb(15, 15, 15);
  &:hover {
    background-color: black;
    color: white;
    border: 2px solid white;
  }
}
/* ... */

